2004-08-09  Mikael Hallendal  <micke@imendio.com>

	* examples/test-tunnel.c: Updated.
	* loudmouth/lm-connection.[ch]:
	(lm_connection_get_jid), (lm_connection_set_jid): 
	- Replaced the _host functions with these. These makes much more sense.

2004-08-08  Mikael Hallendal  <micke@imendio.com>

	* configure.in: Bumped version to 0.17

2004-08-08  Mikael Hallendal  <micke@imendio.com>

	* docs/reference/tmpl/lm-proxy.sgml: Updated docs
	* examples/test-tunnel.c: Use the new API for connecting to other host
	  than the actual server name (host part of jid).
	* loudmouth/lm-connection.[ch]:
	(lm_connection_set_host), (lm_connection_get_host): Added
	- Use lm_connection_get_host internally when connecting.
	- Make LM_PROXY_TYPE_NONE reset the proxy settings on a connection.
	* loudmouth/lm-proxy.c: (_lm_proxy_connect_cb): Don't connect when 
	  proxy is of type LM_PROXY_TYPE_NONE.

2004-08-08  Mikael Hallendal  <micke@imendio.com>

	* docs/reference/tmpl/lm-proxy.sgml: Added LM_PROXY_TYPE_NONE
	* examples/Makefile.am: Added test-tunnel.c
	* examples/test-tunnel.c: 
	- Added test that uses LM_PROXY_TYPE_NONE.
	* loudmouth/lm-internals.h: Cleaning
	* loudmouth/lm-proxy.c: 
	- Support using LM_PROXY_TYPE_NONE for direct 
	  (for example an ssh-tunnel) "proxy".

2004-08-03  Mikael Hallendal  <micke@imendio.com>

	* Synced from SVN. Going to continue working on it here.

2004-06-15  Mikael Hallendal  <micke@imendio.com>

	* README: Updated GnuTLS dependency.
	* mono/*: Some work on the mono bindings.

2004-05-28  Mikael Hallendal  <micke@imendio.com>

	* configure.in: 
	- Correctly inform whether SSL support was enabled or not.

2004-05-28  Mikael Hallendal  <micke@imendio.com>

	* src/lm-sha.c: Fixed lvalue cast that wasn't approved by newer GCC.

2004-05-10  Mikael Hallendal  <micke@imendio.com>

	* configure.in: Enable Mono on request
	
	* mono/*: 
	- Updated the bindings some.
	- Removed the autogenerated, it's such a small API that I figured